<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewTask">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginBottom="157dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_title_view"
            style="@style/reg_textfields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/login_fields"
            android:hint="@string/title" />

        <EditText
            android:id="@+id/et_info_view"
            style="@style/reg_textfields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/login_fields"
            android:hint="@string/info" />

        <TextView
            style="@style/reg_textviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/add_member" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <AutoCompleteTextView
                android:id="@+id/et_member_view"
                style="@style/reg_textfields"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:background="@drawable/login_fields"
                android:hint="@string/name"
                app:layout_constraintRight_toLeftOf="@id/btn_add_member"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_add_member_view"
                style="@style/reg_buttons"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:background="@drawable/button"
                android:text="@string/add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toRightOf="@id/et_member"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <ListView
            android:id="@+id/member_list_view"
            style="@style/reg_textfields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/reg_textviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/add_file" />

        <Button
            android:id="@+id/btn_add_file_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:drawableStart="@android:drawable/ic_input_add"
            android:drawableTint="@color/navy_blue"
            style="@style/reg_buttons"
            android:background="@drawable/button"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/file_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:itemCount="4"
            tools:listitem="@layout/file_item" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_update_task"
        style="@style/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/update_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>