<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:contentPadding="5dp"
        android:elevation="@dimen/cardview_default_elevation"
        app:cardCornerRadius="10dp"
        app:cardMaxElevation="5dp"
        android:layout_margin="10dp"
        android:backgroundTint="#120136">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="18sp"
                android:background="@drawable/task_title"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingRight="10dp"
                android:textColor="#120136"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Allocated_by"
                android:fontFamily="@font/montserrat"
                android:textColor="#40bad5"
                android:textSize="14sp"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingRight="10dp"/>
            <TextView
                android:id="@+id/tv_allocatedby"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:fontFamily="@font/montserrat"
                android:textSize="14sp"
                android:textColor="#40bad5"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingRight="10dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>